--- a/package.json
+++ b/package.json
@@ -13,5 +13,12 @@
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "vite-plugin-svg-icons": "^2.0.1"
+  },
+  "overrides": {
+    "vue": "latest"
+  },
+  "dependencies": {
+    "@pinia/nuxt": "^0.4.7",
+    "pinia": "^2.0.33"
   }
 }
